IVYPORTAL-16987: handle feedback